--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>This is not for the apartment :) Will you be my Valentine?</title>
+  <title>This is not for the apartment :) Will you be my Valentine though?</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- Handwritten-style Google Font -->
@@ -109,7 +109,7 @@
     </div>
     -->
 
-    <h1>Will you be my Valentine?</h1>
+    <h1>This is not for the apartment :) Though while I have you, Will you be my Valentine?</h1>
 
     <div class="buttons">
       <button id="yesBtn">Yes</button>
@@ -137,7 +137,7 @@
 
       if (yesGrow > 6 && yesGrow <= 12) {
         noBtn.textContent = "Are you sure about that?";
-      } else if (yesGrow > 12) {
+      } else if (yesGrow > 12 && yesGrow < 18) {
         noBtn.textContent = "Maybe click Yes instead… 🤔";
       } else if (yesGrow > 18) {
         noBtn.textContent = "Can a fella goop a little...";
