--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
          src="seal.jpeg"
          alt="seal with all my love" />
 
-    <h1>This is not for the apartment :) Will you be my Valentine?</h1>
+    <h1>This is not for the apartment :) Will you be my Valentine? I will be notified of your choice</h1>
 
     <div class="buttons">
       <button id="yesBtn">Yes</button>
@@ -121,7 +121,7 @@
     <div id="noMessages"></div>
 
     <div id="message">Valentine request: ACCEPTED ✅ Thank you for your cooperation 💓</div>
-    <div id="secret">Wash my belly</div>
+    <div id="secret">Don't you love the illusion of choice!</div>
   </div>
 
   <script>
